tests/ui/type-alias-impl-trait/no_inferrable_concrete_type.stderr
error: item does not constrain `Foo::{opaque#0}`, but has it in its signature
  --> $DIR/no_inferrable_concrete_type.rs:10:12
   |
LL |     pub fn bar(x: Foo) -> Foo {
   |            ^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/no_inferrable_concrete_type.rs:7:20
   |
LL |     pub type Foo = impl Copy;
   |                    ^^^^^^^^^

error: aborting due to 1 previous error

